log
Fri 10 Mar 2023 12:07:15 PM UTC: 
 tests:  0|7
total_score: 0/70
61f2c99
Fri 10 Mar 2023 12:11:40 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
94fb643
Fri 10 Mar 2023 12:22:19 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|0
4463328
Fri 10 Mar 2023 12:23:00 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
485c69a
Fri 10 Mar 2023 12:24:51 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
cbf2e0c
Fri 10 Mar 2023 12:25:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
32f805a
Thu 16 Mar 2023 04:04:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
570d050
Thu 16 Mar 2023 04:11:44 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:105:17: error: invalid operands to binary + (have ‘Vector’ and ‘Vector’)
  105 |     suma = a[i] + b[i];
      |            ~~~~ ^ ~~~~
      |             |      |
      |             Vector Vector
Compilation failed
df09248
Thu 16 Mar 2023 04:16:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
55b9078
Thu 16 Mar 2023 04:28:20 PM UTC: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:104:17: error: invalid operands to binary + (have ‘Vector’ and ‘Vector’)
  104 |     c[i] = a[i] + b[i];
      |            ~~~~ ^ ~~~~
      |             |      |
      |             Vector Vector
Compilation failed
c5da649
Thu 16 Mar 2023 04:47:12 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘obtenerValor’:
exercises.c:99:11: error: returning ‘Vector *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Werror=int-conversion]
   99 |    return valor;
      |           ^~~~~
exercises.c: In function ‘sumaV’:
exercises.c:109:17: error: invalid operands to binary + (have ‘Vector’ and ‘Vector’)
  109 |     c[i] = a[i] + b[i];
      |            ~~~~ ^ ~~~~
      |             |      |
      |             Vector Vector
cc1: all warnings being treated as errors
Compilation failed
04ef3b0
Thu 16 Mar 2023 04:53:12 PM UTC: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘obtenerValor’:
exercises.c:94:8: error: variable ‘valor’ set but not used [-Werror=unused-but-set-variable]
   94 |   int *valor;
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
e48b076
Thu 16 Mar 2023 04:53:26 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
d3382fd
Thu 16 Mar 2023 04:57:53 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
871354a
Thu 16 Mar 2023 05:08:17 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:57:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   57 |   scanf("%c", p->nombre);
      |   ^~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
425b84d
